--- a/src/main/resources/com/matteotocci/app/ModificaPassword.fxml
+++ b/src/main/resources/com/matteotocci/app/ModificaPassword.fxml
@@ -12,55 +12,57 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Priority?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="350.0" prefWidth="170.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.ModificaPassword">
+<AnchorPane prefHeight="350.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.ModificaPassword">
     <children>
-        <VBox layoutY="0.0" prefHeight="350.0" prefWidth="700.0" style="-fx-padding: 20;">
+        <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" style="-fx-padding: 20;">
             <children>
-                <HBox alignment="CENTER_LEFT" prefHeight="109.0" prefWidth="660.0" spacing="15.0">
+                <HBox alignment="CENTER_LEFT" spacing="15.0" VBox.vgrow="NEVER">
                     <children>
                         <ImageView fitHeight="71.0" fitWidth="94.0" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@immagini/logo.jpg" />
                             </image>
                         </ImageView>
-                        <Label style="-fx-font-size: 28px; -fx-font-weight: bold; -fx-text-fill: #ff9900;" text="Modifica Password" />
+                        <Label style="-fx-font-size: 28px; -fx-font-weight: bold; -fx-text-fill: #ff9900;" text="Modifica Password" HBox.hgrow="ALWAYS"/>
                     </children>
                     <padding>
                         <Insets bottom="20.0" />
                     </padding>
                 </HBox>
-                <VBox spacing="15.0">
+
+                <VBox spacing="15.0" VBox.vgrow="ALWAYS">
                     <children>
-                        <GridPane hgap="10.0" vgap="10.0">
+                        <GridPane hgap="10.0" vgap="10.0" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
                             <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="198.60001220703126" minWidth="10.0" prefWidth="127.4" />
-                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="379.40000000000003" minWidth="10.0" prefWidth="280.8000183105469" />
-                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="210.80001831054688" minWidth="50.0" prefWidth="205.19998168945312" />
+                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="Infinity" minWidth="10.0" prefWidth="150.0" />
+                                <ColumnConstraints hgrow="ALWAYS" maxWidth="Infinity" minWidth="10.0" />
+                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="Infinity" minWidth="50.0" prefWidth="80.0" />
                             </columnConstraints>
+                            <rowConstraints>
+                                <RowConstraints vgrow="ALWAYS" />
+                                <RowConstraints vgrow="ALWAYS" />
+                                <RowConstraints vgrow="ALWAYS" />
+                            </rowConstraints>
                             <children>
                                 <Label style="-fx-font-weight: bold;" text="Vecchia Password:" GridPane.rowIndex="0" />
-                                <PasswordField fx:id="vecchiaPasswordField" prefHeight="35.0" prefWidth="383.0" promptText="Inserisci la vecchia password" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                                <PasswordField fx:id="vecchiaPasswordField" promptText="Inserisci la vecchia password" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" GridPane.columnIndex="1" GridPane.rowIndex="0" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" maxWidth="Infinity" />
                                 <Label style="-fx-font-weight: bold;" text="Nuova Password:" GridPane.rowIndex="1" />
-                                <PasswordField fx:id="nuovaPasswordField" promptText="Inserisci la nuova password" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                <PasswordField fx:id="nuovaPasswordField" promptText="Inserisci la nuova password" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" GridPane.columnIndex="1" GridPane.rowIndex="1" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" maxWidth="Infinity" />
                                 <Label style="-fx-font-weight: bold;" text="Conferma Password:" GridPane.rowIndex="2" />
-                                <PasswordField fx:id="confermaPasswordField" promptText="Conferma la nuova password" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                <PasswordField fx:id="confermaPasswordField" promptText="Conferma la nuova password" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" GridPane.columnIndex="1" GridPane.rowIndex="2" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" maxWidth="Infinity" />
                                 <CheckBox fx:id="mostraVecchiaPasswordCheckBox" mnemonicParsing="false" onAction="#mostraNascondiVecchiaPassword" text="Mostra" GridPane.columnIndex="2" GridPane.rowIndex="0" />
                                 <CheckBox fx:id="mostraNuovaPasswordCheckBox" mnemonicParsing="false" onAction="#mostraNascondiNuovaPassword" text="Mostra" GridPane.columnIndex="2" GridPane.rowIndex="1" />
                                 <CheckBox fx:id="mostraConfermaPasswordCheckBox" mnemonicParsing="false" onAction="#mostraNascondiConfermaPassword" text="Mostra" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                                <TextField fx:id="vecchiaPasswordFieldVisible" managed="false" promptText="Inserisci la vecchia password" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-                                <TextField fx:id="nuovaPasswordFieldVisible" managed="false" promptText="Inserisci la nuova password" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                <TextField fx:id="confermaPasswordFieldVisible" managed="false" promptText="Conferma la nuova password" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                <TextField fx:id="vecchiaPasswordFieldVisible" managed="false" promptText="Inserisci la vecchia password" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="0" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" maxWidth="Infinity" />
+                                <TextField fx:id="nuovaPasswordFieldVisible" managed="false" promptText="Inserisci la nuova password" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="1" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" maxWidth="Infinity" />
+                                <TextField fx:id="confermaPasswordFieldVisible" managed="false" promptText="Conferma la nuova password" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="2" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" maxWidth="Infinity" />
                             </children>
-                            <rowConstraints>
-                                <RowConstraints />
-                                <RowConstraints />
-                                <RowConstraints />
-                            </rowConstraints>
                         </GridPane>
-                        <HBox alignment="BOTTOM_RIGHT" prefHeight="78.0" prefWidth="660.0">
+                        <HBox alignment="BOTTOM_RIGHT" VBox.vgrow="NEVER">
                             <children>
                                 <Button onMouseClicked="#salvaNuovaPassword" style="-fx-background-color: #008CBA; -fx-text-fill: white; -fx-padding: 10 20; -fx-font-weight: bold; -fx-border-radius: 5; -fx-cursor: hand; -fx-font-size: 14px;" text="Salva Nuova Password" />
                             </children>
@@ -71,3 +73,4 @@
         </VBox>
     </children>
 </AnchorPane>
+
