--- a/src/main/resources/com/matteotocci/app/HomePage.fxml
+++ b/src/main/resources/com/matteotocci/app/HomePage.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -28,13 +29,44 @@
                         <Label fx:id="nomeUtenteLabelHomePage" prefHeight="74.0" prefWidth="114.0" text="Nome e Cognome" />
                      </children>
                   </HBox>
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="75.0" prefWidth="180.0" text="Home Page" VBox.vgrow="NEVER" />
-                  <Button fx:id="BottoneRicette" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#AccessoRicette" prefHeight="75.0" prefWidth="180.0" text="Ricette" VBox.vgrow="NEVER" />
-                  <Button mnemonicParsing="false" prefHeight="75.0" prefWidth="180.0" text="Piano Alimentare" VBox.vgrow="NEVER" />
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="75.0" prefWidth="180.0" text="Home Page" VBox.vgrow="NEVER">
+                     <graphic>
+                        <ImageView fitHeight="31.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../../../../../../OneDrive/Immagini/Rullino/sticker-png-house-symbol-computer-font-button-line-logo-hand-blackandwhite.png" />
+                           </image>
+                        </ImageView>
+                     </graphic></Button>
+                  <Button fx:id="BottoneRicette" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#AccessoRicette" prefHeight="75.0" prefWidth="180.0" text="Ricette" VBox.vgrow="NEVER">
+                     <graphic>
+                        <ImageView fitHeight="41.0" fitWidth="43.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
+                           <viewport>
+                              <Rectangle2D />
+                           </viewport>
+                           <image>
+                              <Image url="@../../../../../../../../OneDrive/Immagini/Rullino/5885d90d45edbf705f86821326124b6e.jpg" />
+                           </image>
+                        </ImageView>
+                     </graphic></Button>
+                  <Button mnemonicParsing="false" prefHeight="75.0" prefWidth="180.0" text="Piano Alimentare" VBox.vgrow="NEVER">
+                     <graphic>
+                        <ImageView fitHeight="38.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../../../../../../OneDrive/Immagini/Rullino/istockphoto-1131363941-612x612.jpg" />
+                           </image>
+                        </ImageView>
+                     </graphic></Button>
                   <Button fx:id="BottoneAlimenti" mnemonicParsing="false" onAction="#AccessoAlimenti" prefHeight="75.0" prefWidth="180.0" text="Alimenti" VBox.vgrow="ALWAYS">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
+                     <graphic>
+                        <ImageView fitHeight="51.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../../../../../../OneDrive/Immagini/Rullino/5007528-ristorante-cibo-cucina-line-icona-illustrazione-logo-modello-adatto-per-molti-scopi-gratuito-vettoriale.jpg" />
+                           </image>
+                        </ImageView>
+                     </graphic>
                   </Button>
                </children>
             </VBox>
